<resources>
    <string name="app_name">小蜜蜂</string>
    <string name="skip">Skip</string>
    <string name="search_keyword_hint">Enter Keyword to Search</string>
    <string name="exit_app">Press again to exit.</string>
    <string name="reload_page">Reload Page</string>
    <string name="available_service">Available Services</string>
    <string name="home_popular">Popular Services</string>
    <string name="home_symn">Services You May Need</string>
    <string name="home_">Home</string>
    <string name="home"><font size="12">Home</font></string>
    <string name="carts"><font size="12">My Carts</font></string>
    <string name="orders"><font size="12">Orders</font></string>
    <string name="receipt"><font size="12">History</font></string>
    <string name="my"><font size="12">More</font></string>
    <string name="about">About Little Bee</string>
    <string name="why">Why Little Bee?</string>
    <string name="user_guide">App User Guide</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_language">Change Language</string>
    <string name="payment_option">Payment Information</string>
    <string name="logout">Logout</string>
    <string name="version">Version: 1.0.0</string>
    <string name="english_title">English</string>
    <string name="myanmar_title">Myanmar</string>
    <string name="chinese_title">Chinese</string>
    <string name="confirm">Confirm</string>
    <string name="continues">Continue</string>
    <string name="please_login">Please Login!</string>
    <string name="go_to_login">Go To LogIn</string>
    <string name="no_service">No Services</string>
    <string name="search_for_services">Search for Services</string>
    <string name="carts_label">My Carts</string>
    <string name="orders_label">Orders</string>
    <string name="receipt_label">History</string>
    <string name="delete_cart"><u>Delete</u></string>
    <string name="selected">Select</string>
    <string name="unselected">Unselect</string>
    <string name="address_label">Address</string>
    <string name="add_address_label">Add New Address</string>
    <string name="edit_address_label">Edit Address</string>
    <string name="final_order_label">Items in your Cart</string>
    <string-array name="times">

        <item name="time10"><font size="14">09:00 AM - 11:00 AM</font></item>
        <item name="time11"><font size="14">11:00 AM-  01:00 PM</font></item>
        <item name="time12"><font size="14">01:00 PM - 03:00 PM</font></item>
        <item name="time13"><font size="14">03:00 PM - 05:00 PM</font></item>

    </string-array>
    <string-array name="caltimes">

        <item name="t10">09:00 AM </item>
        <item name="t12">11:00 AM </item>
        <item name="t14">01:00 PM</item>
        <item name="t16">03:00 PM </item>
        <item name="t18">05:00 PM</item>

    </string-array>
    <string-array name="items">

        <item><font size="14">Home</font></item>
        <item><font size="14">Office</font></item>
        <item><font size="14">Other</font></item>

    </string-array>
    <string name="confirm_address">Please select the date and estimate arrival time you prefer.</string>
    <string name="date">Date &#160;</string>
    <string name="time">Time &#160;</string>
    <string name="address_list_label">Address &#160;</string>
    <string name="add_new_address">+ Add New Address</string>
    <string name="fill_address">Fill Address</string>
    <string name="go_map">Go Map</string>
    <string name="add_new_address_">Please Add New Address</string>
    <string name="select_address_first">Please select address.</string>
    <string name="no_data">No Data</string>
    <string name="add_more_service">Add More Services</string>
    <string name="feature_service">Search for a service</string>
    <string name="select">Select</string>
    <string name="hide_detail">Hide</string>
    <string name="show_detail">Detail</string>
    <string name="login">LogIn</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="hyperlink">Agree to<a href="https://www.busybeesmyanmar.com/agreement"> Terms &amp; Conditions</a></string>
    <string name="payment">Payment</string>
    <string name="payment_type">Payment Type</string>
    <string name="cash">Cash</string>
    <string name="bank">Bank</string>
    <string name="total_amount_pay">Total Amount</string>
    <string name="no">No</string>
    <string name="service">Service</string>
    <string name="disc">Disc</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount ( Inclusive Tax )</string>
    <string name="thank_you_txt">Thank You! </string>
    <string name="thank_you_again">Your Trusted Partner!</string>
    <string name="order_confirm">Our customer care will call you soon for your order confirmation.</string>
    <string name="continues_for_more_service">Continue for more Service</string>
    <string name="power_by_little_bee">Power by Little Bee</string>
    <string name="no_internet_connection">Something went wrong! \n Check internet connection</string>
    <string name="no_internet">Check internet connection</string>
    <string name="currency">¥</string>
    <string name="save">Save</string>
    <string name="phone_blank">Please Add Phone Number</string>
    <string name="v_code">OTP has been sent to your phone</string>
    <string name="enter_code">Enter 6-digits code</string>
    <string name="resend">Resend</string>
    <string name="logout_confirm">Logout?</string>
    <string name="do_no_logout">No</string>
    <string name="do_yes_logout">Yes</string>
    <string name="name_blank">Please Add Name</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="edit_image_dialog_title"><font size="14">Select Action</font></string>
    <string name="edit_photo"><font size="14">Edit Photo</font></string>
    <string name="viewphoto"><font size="14">View Photo</font></string>
    <string name="agree_to">Please Agree to Terms &amp; Conditions</string>
    <string name="map">Go Map</string>
    <string name="gps_alert">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="gps_enable_yes">Enable</string>
    <string name="gps_enable_no">Cancel</string>
    <string name="location_alert">Location is required for Order.You can select your order location by clicking "Go Map".</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="fill_all_detail">Please fill all detail.</string>
    <string name="choose_lng">Select Language</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="survey_request">Survey Requested</string>
    <string name="survey">Survey Request</string>
    <string name="survey_label">Survey</string>
    <string name="add_service_first">Please select service first.</string>
    <string name="qty_zero">Quantity must have at least one. If you don\'t want you can click delete button.</string>
    <string name="no_item_cart">No item in cart</string>
    <string name="cant_update_more_ten">Can not increase more than 10.</string>
    <string name="delete_cart_confirm">Delete?</string>
    <string name="delete_cart_confirm_text">Are you sure want to Delete this Order Services?</string>
    <string name="do_ok">OK</string>
    <string name="do_cancel">Cancel</string>
    <string name="lead_form_title_label">Title</string>
    <string name="lead_form_budget_label">Budget</string>
    <string name="lead_form_sqfeet_label">Square Feet</string>
    <string name="lead_form_photo_label">Photos</string>
    <string name="lead_form_detail_label">Details</string>
    <string name="lead_form_title">Please Describe Details.</string>
    <string name="lead_form_budget">¥ 0.0</string>
    <string name="length_txt">length</string>
    <string name="width_txt">width</string>
    <string name="lead_form_photo_upload_txt">Upload Photos</string>
    <string name="lead_form_detail_txt">More Details...</string>
    <string name="title_et_error">Title</string>
    <string name="budget_et_error">Budget</string>
    <string name="first_square_et_error">Length</string>
    <string name="second_square_feet_et_error">Width</string>
    <string name="home_photos_error">Please select Photos</string>
    <string name="details_et_error">More Details</string>
    <string name="photo_limit_txt">Only accept 5 photos!</string>
    <string name="select_service">Select Service</string>
    <string name="confirm_promo_txt">Are you sure with this Promotion Code?</string>
    <string name="promo_no">Choose Again</string>
    <string name="promo_yes">Sure</string>
    <string name="confirm_call"> Call Admin ?</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="registrationError">Registration Error</string>
    <string name="ok">Ok</string>
    <string name="order_detail">Order Detail</string>
    <string name="view_receipt"><u>View Receipt</u></string>
    <string name="re_order">Reorder</string>
    <string name="rate_now">Rate Now</string>
    <string name="other_rating">Others Rating</string>
    <string name="other_comment">Other Comments</string>
    <string name="comment">Comment...</string>
    <string name="all_ready_rated">Already Rated</string>
    <string name="r_add">Next to AK Bar, Dongcheng 7th Street, 1 Ward,\nLaukkaing Township\n09 689 082 742, 09 684 096 773</string>
    <string name="payment_receipt">Payment Receipt</string>
    <string name="received_by"><u>Received By</u></string>
    <string name="contact_address">Next to AK Bar, Dongcheng 7th Street, 1 Ward, Laukkaing Township</string>
    <string name="history_detail">History Details</string>
    <string name="back"><font size="14">Back</font></string>
    <string name="next"><font size="14">Next</font></string>
    <string name="finish"><font size="14">Finish</font></string>
    <string name="continue_error_msg">Sorry! You can\'t order both Survey Request and Other items. \n Please remove Survey Request (or) Other items!</string>
    <string name="Idle">Idle</string>
    <string name="Upcoming">Upcoming</string>
    <string name="Ongoing">Ongoing</string>
    <string name="Completed">Completed</string>
    <string name="OCancel">Cancel</string>
    <string name="Confirmed">Confirmed</string>
    <string name="OTest">Testing</string>
    <string name="vendor_info">Vendor Information</string>
    <string name="call_now">Call Now</string>
    <string name="overall_rate">Overall Rating</string>
    <string name="service_provider">Service Provider</string>
    <string name="send">Send</string>
    <string name="noti_title">Notifications</string>
    <string name="reference_no">Reference No - </string>
    <string name="order_no">Order No.</string>
    <string name="order_count">Order Count . </string>
</resources>