<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeTab"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_new"
        android:title="@string/home" />

    <item
        app:showAsAction="always"
        android:id="@+id/cartTab"
        android:icon="@drawable/ic_cart_new"
        android:title="@string/carts" />

    <item
        app:showAsAction="always"
        android:id="@+id/orderTab"
        android:icon="@drawable/ic_orders_new"
        android:title="@string/orders" />
    <item
        app:showAsAction="always"
        android:id="@+id/receiptTab"
        android:icon="@drawable/ic_receipt_new"
        android:title="@string/receipt" />

    <item
        app:showAsAction="always"
        android:id="@+id/moreTab"
        android:icon="@drawable/ic_my_new"
        android:title="@string/my" />


</menu>
