<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding16"
    android:background="@drawable/dialog_corner"
    android:minWidth="300dp">

    <LinearLayout
        android:padding="@dimen/padding4"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/padding2"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/fontSizeMedium"
            android:gravity="center"
            android:text="@string/delete_cart_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="@dimen/padding2"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/fontSizeMedium"
            android:gravity="center"
            android:text="@string/delete_cart_confirm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/margin20"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/delete_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin6"
                android:layout_marginRight="@dimen/margin6"
                android:layout_marginBottom="@dimen/margin6"
                android:layout_weight="1"
                android:background="@drawable/round_corner_grey_stroke_color"
                android:text="@string/do_cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/fontSizeSmall" />

            <Button
                android:textSize="@dimen/fontSizeSmall"
                android:layout_marginBottom="@dimen/margin6"
                android:layout_marginLeft="@dimen/margin6"
                android:layout_marginTop="@dimen/margin6"
                android:id="@+id/delete_yes_btn"
                android:textColor="@color/black"
                android:background="@drawable/round_corner_theme_color"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/do_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>