<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin8"
    android:layout_marginTop="@dimen/margin24"
    android:layout_marginRight="@dimen/margin8"
    android:background="@drawable/dialog_corner_white_bg"
    android:orientation="vertical"
    android:padding="@dimen/padding10">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin8"
        android:paddingHorizontal="@dimen/padding8"
        android:paddingVertical="@dimen/padding16"
        android:orientation="vertical" >

        <RadioButton
            android:textStyle="bold"
            android:textSize="@dimen/fontSizeSmall"
            android:layout_marginLeft="@dimen/margin8"
            android:padding="@dimen/padding8"
            android:buttonTint="@color/theme_color"
            android:id="@+id/myanmar_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myanmar_title"
            android:textColor="@color/home_service_title_color" />

        <RadioButton
            android:textStyle="bold"
            android:textSize="@dimen/fontSizeSmall"
            android:layout_marginLeft="@dimen/margin8"
            android:padding="@dimen/padding8"
            android:buttonTint="@color/theme_color"
            android:textColor="@color/home_service_title_color"
            android:id="@+id/english_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english_title"/>

        <RadioButton
            android:textStyle="bold"
            android:textSize="@dimen/fontSizeSmall"
            android:layout_marginLeft="@dimen/margin8"
            android:padding="@dimen/padding8"
            android:buttonTint="@color/theme_color"
            android:textColor="@color/home_service_title_color"
            android:id="@+id/chinese_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chinese_title" />

    </RadioGroup>

    <Button
        android:textAllCaps="false"
        android:id="@+id/confirm_btn"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSizeMedium"
        android:textStyle="bold"
        android:background="@drawable/two_color_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>

    <ImageView
        android:layout_width="@dimen/width50"
        android:layout_height="@dimen/height50"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/image_rounded_corner_theme_bg"
        android:src="@drawable/change_language_icon" />

</RelativeLayout>

