<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:orientation="vertical"
android:layout_height="wrap_content">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin10"
    android:layout_marginTop="@dimen/margin24"
    android:layout_marginRight="@dimen/margin10"
    android:background="@drawable/dialog_corner"
    android:orientation="vertical"
    android:padding="@dimen/padding10">

    <TextView
        android:padding="@dimen/padding2"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/fontSizeMedium"
        android:gravity="center"
        android:text="@string/confirm_promo_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin24"
        android:orientation="horizontal">

        <Button
            android:textSize="@dimen/fontSizeSmall"
            android:layout_marginBottom="@dimen/margin6"
            android:background="@drawable/rounded_corner_white_color"
            android:layout_marginRight="@dimen/margin6"
            android:layout_weight="1"
            android:id="@+id/promo_confirm_no_btn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:text="@string/promo_no"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50" />

        <Button
            android:textSize="@dimen/fontSizeSmall"
            android:layout_marginBottom="@dimen/margin6"
            android:layout_marginLeft="@dimen/margin6"
            android:id="@+id/promo_confirm_yes_btn"
            android:textColor="@color/black"
            android:background="@drawable/two_color_shape"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/promo_yes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height50" />


    </LinearLayout>

</LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/width50"
        android:layout_height="@dimen/height50"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@drawable/image_circle_shape_white_bg"
        android:src="@drawable/ic_little_bee_logo" />

</RelativeLayout>
